Changed reading tips to reading help

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html">About</a>
@@ -164,7 +164,7 @@
                                 Take a 10 minute break between the two sections.
                                 After completing the full practice exam, review the explanations and study the
                                 strategies on the <a href="explanations-math.html">Math Help</a> and <a
-                                    href="explanations-reading.html">Reading Tips</a> pages.
+                                    href="explanations-reading.html">Reading Help</a> pages.
                                 Then, practice the math and reading sections separately.
                                 Finally, take the additional full practice exam to see your progress.
 
