--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
