--- a/explanations-math.html
+++ b/explanations-math.html
@@ -50,7 +50,7 @@
                         <a class="nav-link active" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -699,7 +699,7 @@
                     <!-- Navigation -->
                     <div class="d-flex justify-content-between mb-4">
                         <a href="index.html" class="btn btn-outline-secondary">Back to Home</a>
-                        <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Tips</a>
+                        <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Help</a>
                     </div>
                 </div>
             </div>
