--- a/explanations-reading.html
+++ b/explanations-reading.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reading Tips - Electrical Aptitude Test Practice</title>
+    <title>Reading Help - Electrical Aptitude Test Practice</title>
     <meta name="description"
         content="Study strategies and tips for the reading comprehension section of the Electrical apprenticeship aptitude test.">
 
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link active" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -90,7 +90,7 @@
                     <!-- Strategy Sections -->
                     <div class="card mb-4">
                         <div class="card-header bg-success text-white">
-                            <h5 class="mb-0">General Reading Tips</h5>
+                            <h5 class="mb-0">General Reading Help</h5>
                         </div>
                         <div class="card-body">
                             <ul>
