--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -124,7 +124,7 @@
                                 Understand the test format and improve your approach.</p>
                             <div class="d-flex gap-2">
                                 <a href="explanations-math.html" class="btn btn-outline-primary">Math Help</a>
-                                <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Tips</a>
+                                <a href="explanations-reading.html" class="btn btn-outline-primary">Reading Help</a>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                                 <li><strong>Study:</strong> Go check out the <a href="explanations-math.html">Math Help
                                         page</a> and make sure you understand
                                     the strategies for solving each type of question. Look over the <a
-                                        href="explanations-reading.html">Reading Tips page</a> as
+                                        href="explanations-reading.html">Reading Help page</a> as
                                     well.
                                 <li><strong>Practice sections separately:</strong> Use the <a
                                         href="practice-math.html">Math Practice</a> and <a
