--- a/practice-reading.html
+++ b/practice-reading.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="explanations-math.html"> Math Help</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="explanations-reading.html">Reading Tips</a>
+                        <a class="nav-link" href="explanations-reading.html">Reading Help</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -1650,7 +1650,7 @@
                             <p class="card-text">Looking for strategies and tips? Check out the reading
                                 comprehension
                                 study guide.</p>
-                            <a href="explanations-reading.html" class="btn btn-primary">View Reading Tips</a>
+                            <a href="explanations-reading.html" class="btn btn-primary">View Reading Help</a>
                         </div>
                     </div>
 
