--- a/about.html
+++ b/about.html
@@ -102,7 +102,8 @@
                                 free time.
                             </p>
                             <p>If you find this site helpful, please consider supporting it by buying me a coffee or
-                                donating to the site. I'm not trying to make a profit, I just want to help people. </p>
+                                donating to the site, it only takes a minute and helps keep the site free for everyone.
+                            </p>
                         </div>
                     </div>
                     <!-- Donation Section -->
@@ -133,7 +134,7 @@
                             <h5 class="mb-0">Frequently Asked Questions</h5>
                         </div>
                         <div class="card-body">
-                            <h6 class="mt-3">Is this site affiliated with IBEW?</h6>
+                            <h6 class="mt-3">Is this site affiliated with the IBEW?</h6>
                             <p>No, this is an independent educational resource. This site is not affiliated with,
                                 endorsed by,
                                 or connected to the International Brotherhood of Electrical Workers or any official
@@ -142,23 +143,25 @@
                             <h6 class="mt-4">Is this site really free?</h6>
                             <p>Yes! All practice materials and resources on this site are completely free to use. There
                                 are no hidden fees, subscriptions, or paywalls. <strong> Donations are not required, but
-                                    are greatly appreciated.</strong></p>
+                                    are greatly appreciated. Donate whatever you think is fair.</strong></p>
                             <h6 class="mt-4">Where are these questions from?</h6>
                             <p>I used
-                                an LLM to generate the math questions and answers, as well as the reading passages. I
+                                an LLM to generate some of the math questions and answers, as well as the reading
+                                passages. I also created a lot of them myself. I
                                 based the format and question types off of my memory of an aptitude test that I took in
-                                2025. I'm not sure if the questions are exactly the same, but they should be close.
+                                2025. I'm not sure if the questions are exactly the same type, but they should be close.
                                 I'm confident that
-                                if you can perform well on these practice exams, you'll excel on the actual test. </p>
+                                if you can perform well on these practice exams, you'll do well on the actual test. </p>
 
                             <h6 class="mt-4">What does a typical electrical apprenticeship aptitude test cover?</h6>
-                            <p>The aptitude test typically includes two main sections: mathematics (algebra,
-                                functions, number series) and reading comprehension. Our practice materials are designed
+                            <p>An aptitude test typically includes two main sections: mathematics and reading
+                                comprehension. These practice materials are designed
                                 to help you prepare for these areas. Some tests cover additional topics such as
-                                mechanical aptitude and spatial reasoning.</p>
+                                mechanical aptitude and spatial reasoning, those topics are not covered on this site.
+                            </p>
 
                             <h6 class="mt-4">How should I use this site to prepare?</h6>
-                            <p>We recommend starting with a full practice exam and mimicking the test environment. To do
+                            <p>I recommend starting with a full practice exam and mimicking the test environment. To do
                                 so, set a timer for 50 minutes for the math portion, and 50 minutes for the reading
                                 portion.
                                 Take a 10 minute break between the two sections.
@@ -170,9 +173,11 @@
 
                             </p>
 
-                            <h6 class="mt-4">Can I use this on mobile devices?</h6>
-                            <p>Yes! This site is fully responsive and works on smartphones, tablets, and desktop
-                                computers. Since the test is taken on a computer, that's the best way to practice.</p>
+                            <h6 class="mt-4">I saw a question on the test that wasn't on this site!</h6>
+                            <p>Let me know, and I'll add it to the site.</p>
+                            <h6 class="mt-4">Is this good preparation for the GAN aptitude test?</h6>
+                            <p>I'm not familiar with that test, so I would caution against using this site as a resource
+                                to prepare for that test.</p>
                         </div>
                     </div>
 
