Edited contact page; First draft complete

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Electrical Aptitude Test Practice</title>
     <meta name="description"
-        content="Contact us for bug reports, feature requests, thank you notes, or other inquiries about the Electrical Aptitude Test Practice site.">
+        content="Contact me for bug reports, feature requests, thank you notes, or other inquiries about the Electrical Aptitude Test Practice site.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon_32.png">
@@ -113,8 +113,8 @@
                             <ul>
                                 <li><strong>Thank you notes</strong> - I love hearing how the site has helped you!</li>
                                 <li><strong>Bug reports</strong> - Help me improve by reporting any issues you find</li>
-                                <li><strong>Feature requests</strong> - Share your ideas for new features or
-                                    improvements</li>
+                                <li><strong>Feature requests</strong> - Share your ideas for improvements, including
+                                    questions that weren't covered</li>
                                 <li><strong>Other inquiries</strong> - Any other questions or feedback</li>
                             </ul>
                         </div>
@@ -141,7 +141,7 @@
                                 <li><strong>Browser and device:</strong> What browser are you using? (Chrome, Firefox,
                                     Safari, etc.) What device? (Desktop, tablet, mobile)</li>
                                 <li><strong>Any other details:</strong> Include as many details as possible that might
-                                    help us understand the issue</li>
+                                    help me understand the issue</li>
                             </ol>
                             <p class="text-muted"><em>Example subject: "Bug Report: Answer explanation not displaying
                                     for question m15"</em></p>
