Small content edits

--- a/explanations-reading.html
+++ b/explanations-reading.html
@@ -72,7 +72,7 @@
 
                     <!-- Overview Section -->
                     <div class="card mb-4">
-                        <div class="card-header">
+                        <div class="card-header bg-primary text-white">
                             <h5 class="mb-0">Overview</h5>
                         </div>
                         <div class="card-body">
@@ -94,9 +94,9 @@
                         </div>
                         <div class="card-body">
                             <ul>
-                                <li>Like everything else in life, practicing these types of problems will make them
+                                <li>Practicing these types of problems will make them
                                     easier.</li>
-                                <li>Read the passage. I sort of skim a little bit, making note of where things are so I
+                                <li>Read the passage. I sort of skim, making a mental note of where things are so I
                                     can come back and answer specific questions. It's unlikely I will remember the
                                     answer
                                     from reading it once; I'm reading it so I know where to find the information
@@ -110,7 +110,7 @@
                                 <li>Pay attention to topic sentences and concluding statements</li>
                                 <li>Don't rely on prior knowledge - base answers only on the passage</li>
                                 <li>At the 1 minute remaining mark, I think it's best to start guessing and make sure
-                                    that every question is at least answered.</li>
+                                    that every question is answered.</li>
                             </ul>
                         </div>
                     </div>
@@ -130,6 +130,8 @@
                                 <li><strong>Vocabulary:</strong> Determine word meaning from context</li>
                                 <li><strong>Author's Purpose:</strong> Understand why the author wrote the passage</li>
                             </ul>
+                            <p>I'll go over each type of question in more detail below, as well as my best strategies
+                                for answering them.</p>
                         </div>
                     </div>
 
@@ -259,7 +261,8 @@
                                 </div>
                                 <p class="text-muted mt-2"><strong>Answer: B</strong> - The passage focuses on how
                                     collective action and organized movements transformed French society.</p>
-                                <p class="text-muted mt-2">A can be ruled out because the revolution was not peaceful. C
+                                <p class="text-muted mt-2">Choice A can be ruled out because the revolution was not
+                                    peaceful. C
                                     is ruled out because the passage doesn't focus on the guillotine- it focuses on
                                     collective action and organizing. D is ruled out because it's too specific and the
                                     passage talks about many different groups and movements, not just Robespierre.</p>
@@ -293,7 +296,8 @@
                                     collective organizing during the revolution created
                                     lasting
                                     change and continue to inspire movements today.</p>
-                                <p class="text-muted mt-2">A can be ruled out because the passage clearly shows the
+                                <p class="text-muted mt-2">Choice A can be ruled out because the passage clearly shows
+                                    the
                                     revolution had positive impacts- it brought about democracy and inspired movements.
                                     C
                                     is ruled out because the passage specifically talks about working-class people like
@@ -430,7 +434,7 @@
                                     together but doesn't say one requires the other.</p>
                                 <p class="text-muted mt-2">This is a difficult inference question because the
                                     answer isn't directly stated- you have to think about what the passage implies about
-                                    the relationship between policies and methods. A can be ruled out because the
+                                    the relationship between policies and methods. Choice A can be ruled out because the
                                     passage doesn't say violence is the ONLY way- it just shows what happened in this
                                     case. C can be ruled out because it's too absolute- the passage doesn't say ALL
                                     progresssive policies require extreme measures. D can be ruled out because the
@@ -485,9 +489,10 @@
                                     <p class="mb-0 small">These require you to determine the meaning of a word based on
                                         the
                                         context of the passage. If I know what the word means I go with that. I think
-                                        this is the exception to the rule of "not trusting prior information."" If I am
+                                        this is the exception to the rule of "not trusting prior information." If I am
                                         not
-                                        familiar with the word, I skim the passage, look at the context, try to rule out
+                                        familiar with the word, I skim the passage to find the word, look at the
+                                        context, try to rule out
                                         some of the
                                         oddball
                                         answers, and then make my best guess.</p>
