--- a/full-practice_2.html
+++ b/full-practice_2.html
@@ -67,8 +67,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="mb-4">Exam 2</h1>
-                    <p class="lead">This practice exam includes both math and reading comprehension sections. Take your
-                        time and work through each question carefully.</p>
+                    <p class="lead">This practice exam includes both math and reading comprehension sections.</p>
 
                     <!-- Exam Instructions -->
                     <div class="card mb-4">
