--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">What to Expect</h3>
-                            <p>An electrical apprenticeship aptitude test consists of two main sections:</p>
+                            <p>An typical electrical apprenticeship aptitude test consists of two main sections:</p>
                             <ul>
                                 <li><strong>Math Section:</strong> 45 minutes of algebra, functions, number series, and
                                     mathematical
-                                    reasoning. The math sections on this site are longer than the actual test, so they
+                                    reasoning. The math sections on this site are a few problems longer than the actual
+                                    test, so they
                                     use a 50
                                     minute time limit.</li>
                                 <li><strong>Reading Comprehension:</strong> 50 minutes of understanding written passages
@@ -158,10 +159,11 @@
                                 </ul>
                             </ul>
                             <p>These practice exams are designed to help you familiarize yourself with the math and
-                                readingquestion
+                                reading question
                                 types and format you'll encounter on test day. <strong>Additional topics may be tested
                                     on the
-                                    test day, so be sure to practice those as well.</strong> </p>
+                                    test day, so be sure to find out what is on your particular test and practice those
+                                    types of questions as well.</strong> </p>
                         </div>
                     </div>
                 </div>
@@ -194,7 +196,7 @@
                                     additional practice in reading.</li>
                                 <li><strong>Get extra practice and explanations:</strong> If you still need to practice
                                     more, I recommend that you use an LLM like Chat GPT or
-                                    Claude to get extra practice questions and explanations.</li>
+                                    Claude to generate extra practice questions and explanations.</li>
                                 <li><strong>Take the second exam:</strong> 1-2 days before your test, complete <a
                                         href="full-practice_2.html">Exam 2</a> to measure your
                                     progress and further prepare for test day.</li>
