--- a/explanations-math.html
+++ b/explanations-math.html
@@ -69,12 +69,12 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h1 class="mb-4">Math Section Strategies</h1>
-                    <p class="lead">Tips and strategies to help you succeed on the math portion of the Electrical
+                    <p class="lead">Tips and strategies to help you succeed on the math portion of anlectrical
                         aptitude test.</p>
 
                     <!-- Overview Section -->
                     <div class="card mb-4">
-                        <div class="card-header">
+                        <div class="card-header bg-primary text-white">
                             <h5 class="mb-0">Overview</h5>
                         </div>
                         <div class="card-body">
